rust/tests/errors/unclosed_async_for.hyper
stream: object

---

async for item in stream:
    <div>{item}</div>
